--- a/Extension/src/popup/index.html
+++ b/Extension/src/popup/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>FocusForge Popup</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="./popup.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta
+    http-equiv="Content-Security-Policy"
+    content="script-src 'self'; object-src 'self'; connect-src 'self' http://localhost:5000; style-src 'self' 'unsafe-inline';"
+  />
+  <title>FocusForge Popup</title>
+</head>
+<body>
+  <div id="root"></div>
+  <script type="module" src="./popup.js"></script>
+</body>
 </html>
